--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 /target/
-!.mvn/wrapper/maven-wrapper.jar
+.mvn/
 
 ### STS ###
 .apt_generated
@@ -25,4 +25,4 @@
 /nbdist/
 /.nb-gradle/
 
-log/*
+*.log
